# CLI-Miner

./: Cargo.toml  README.md
data/: gamedata.json  save.json  settings.json
data/saves/: DKP1NK  LordAfterEight  Meloninator
src/: concepts.md  definitions.rs  game.rs  gamedata.rs  input.rs  main.rs  main_menu.rs  menus.rs  save_menu.rs  screens.rs  settings_menu.rs  structs.rs  todo.md  todo.txt  ui.rs
