[package]
name = "CLI-Miner"
version = "0.2.5"
edition = "2021"

[dependencies]
clearscreen = "4.0.1"
colored = "3.0.0"
discord-rich-presence = "0.2.5"
hecs = "0.10.5"
rand = "0.9.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rodio = "0.20.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
